k8s/microk8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memory-box-front
spec:
  selector:
    app: memory-box-front
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
