k8s/microk8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memory-box-front
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: public
  tls:
    - hosts:
        - pos-service.cloud
        - www.pos-service.cloud
      secretName: memory-box-front-tls
  rules:
    - host: pos-service.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: memory-box-front
                port:
                  number: 80
    - host: www.pos-service.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: memory-box-front
                port:
                  number: 80
